# course-paper

./: README.md  pyproject.toml
src/: main.py  main_window.py  odestorage.py  plot_window.py  rungekutta.py
