[tool.poetry]
name = "course-paper"
version = "0.1.0"
description = "my course paper"
authors = ["Kirill Petryashev"]
readme = "README.md"
packages = [{include = "course_paper"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
customtkinter = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"